crates/aven-check/tests/fixtures/check/invalid/comptime-rhs-needs-evaluation.av
base = 1
Total = base + 1
